# krearts

./: .gitignore  Makefile  README.md  README_WORKFLOW.md  cinema_jobs.db  config.json  cricket_ashes_screenplay.json  cricket_ashes_script.txt  pyproject.toml
.kiro/adr/: 006-detective-plot-complexity.md
.kiro/docs/: action-planning-vs-graph-analysis.md  detective-plot-complexity-summary.md  framed-suspect-fix-summary.md  framed-suspect-role-analysis.md
cinema/: context.py  logging_config.py  models.py  registry.py  subscene_crew.py
cinema/cmd/: comic_strip_generator.py  critique_detective.py  generate_comic.py  generate_detective_panels.py  krearts.py  migrate_detective_to_workflow.py
cinema/models/: __init__.py  comic_output.py  comic_strip.py  detective_output.py  move_output.py  novel.py
cinema/pipeline/: DESIGN.md  LOGGING.md  README.md  __init__.py  cli.py  detective_comics.py  detective_maker.py  example.py  example_with_screenplay.py  job_tracker.py  movie_maker.py  parallel_comic_generator.py  pipeline.py  state.py  test_pipeline.py
docs/: NOVEL_WRITING.md  REFACTOR_PIPELINE.md  TRANSFORMER_INTEGRATION_COMPLETE.md  aspect_ratio_implementation.md  detective_image_prompt_structure.md  flow_pause_resume.md  gemini-imagegen-basics.md  image_generation_guide.md  krearts_cli.md  workflow-selection-guide.md
examples/: README_WORKFLOW_EXAMPLES.md  book_config.json  extract_screenplay_data.py  scifi_config.json  use_stage_classes.py
knowledge/: GLOSSARY.md  README.md  tmp_storystructure.md
scripts/: extract_docs_llm.py
tests/: test_novel_parser.py
(+151 files in other folders)
